test/expected/using_c_int_least32_t.out
using int_least32_t = char
                      ^
23: error: "int_least32_t": "using" redefinition with different type; original is: using int_least32_t = int
